# catamorphism

./: .hlint.yaml  .travis.yml  LICENSE  README.md  catamorphism.cabal
src/Data/Morphism/: Cata.hs
test/Data/Morphism/: CataSpec.hs
