name:                catamorphism
version:             0.6.0.0
synopsis:            A package exposing a helper function for generating catamorphisms.
description:         A package exposing a helper function for generating catamorphisms.
homepage:            https://github.com/frerich/catamorphism
license:             BSD3
license-file:        LICENSE
author:              Frerich Raabe
maintainer:          frerich.raabe@gmail.com
bug-reports:         https://github.com/frerich/catamorphism/issues
copyright:           Copyright (c) 2014, 2015, 2016, 2017, 2018 Frerich Raabe <frerich.raabe@gmail.com>
category:            Development
build-type:          Simple
cabal-version:       >=1.10
stability:           experimental

source-repository head
  type:       git
  location:   https://github.com/frerich/catamorphism

library
  exposed-modules:     Data.Morphism.Cata
  build-depends:       base >=4.6 && <4.11, template-haskell >=2.8 && <2.13
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
