name:                catamorphism
version:             0.6.0.0
synopsis:            Helper function for generating catamorphisms
description:         A package exposing a helper function for generating catamorphisms.
homepage:            https://github.com/frerich/catamorphism
license:             BSD3
license-file:        LICENSE
author:              Frerich Raabe
maintainer:          frerich.raabe@gmail.com
bug-reports:         https://github.com/frerich/catamorphism/issues
copyright:           Copyright (c) 2014, 2015, 2016, 2017, 2018 Frerich Raabe <frerich.raabe@gmail.com>
category:            Development
build-type:          Simple
cabal-version:       >=1.10
stability:           experimental
tested-with:         GHC == 7.0.4, GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3
                   , GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.1

source-repository head
  type:       git
  location:   https://github.com/frerich/catamorphism

library
  exposed-modules:     Data.Morphism.Cata
  build-depends:       base <5, template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  ghc-options:         -Wall
  build-depends:       base, catamorphism, hspec
  other-modules:       Data.Morphism.CataSpec
  default-language:    Haskell2010
